--- a/index.html
+++ b/index.html
@@ -1,61 +1,41 @@
-<!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
-<html lang="en">
+<<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music Playlist | Looking back of 2021</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Mid-autumn Festival Countdown</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link 
+		href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" 
+		rel="stylesheet"
+	>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="wrapper">
-    <div class="top-bar">
-      <i class="material-icons">expand_more</i>
-      <span>Now Playing</span>
-      <i class="material-icons">more_horiz</i>
-    </div>
-    <div class="img-area">
-      <img src="" alt="">
-    </div>
-    <div class="song-details">
-      <p class="name"></p>
-      <p class="artist"></p>
-    </div>
-    <div class="progress-area">
-      <div class="progress-bar">
-        <audio id="main-audio" src=""></audio>
-      </div>
-      <div class="song-timer">
-        <span class="current-time">0:00</span>
-        <span class="max-duration">0:00</span>
-      </div>
-    </div>
-    <div class="controls">
-      <i id="repeat-plist" class="material-icons" title="Playlist looped">repeat</i>
-      <i id="prev" class="material-icons">skip_previous</i>
-      <div class="play-pause">
-        <i class="material-icons play">play_arrow</i>
-      </div>
-      <i id="next" class="material-icons">skip_next</i>
-      <i id="more-music" class="material-icons">queue_music</i>
-    </div>
-    <div class="music-list">
-      <div class="header">
-        <div class="row">
-          <i class= "list material-icons">queue_music</i>
-          <span>Music list</span>
-        </div>
-        <i id="close" class="material-icons">close</i>
-      </div>
-      <ul>
-        <!-- here li list are coming from js -->
-      </ul>
-    </div>
-  </div>
-
-  <script src="music-list.js"></script>
-  <script src="app.js"></script>
-
+	<section class="text-main">
+		<div>
+			<h2>The New Year music player will be release in:</h2>
+			<div class="countdown">
+				<div class="container-day">
+					<h3 class="day">Time</h3>
+					<h3>Day</h3>
+				</div>
+				<div class="container-hour">
+					<h3 class="hour">Time</h3>
+					<h3>Hour</h3>
+				</div>
+				<div class="container-minute">
+					<h3 class="minute">Time</h3>
+					<h3>Minute</h3>
+				</div>
+				<div class="container-second">
+					<h3 class="second">Time</h3>
+					<h3>Second</h3>
+				</div>
+			</div>
+		</section>
+	</div>
+	<script src="app.js"></script>
 </body>
-</html>
+</html>	
