--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
 <body>
 	<section class="text-main">
 		<div>
-			<h2>The New Year music player will be release in:</h2>
+			<h2>Coming Soon!</h2>
 			<div class="countdown">
 				<div class="container-day">
-					<h3 class="day">Time</h3>
+					<h3 class="day"></h3>
 					<h3>Day</h3>
 				</div>
 				<div class="container-hour">
-					<h3 class="hour">Time</h3>
+					<h3 class="hour"></h3>
 					<h3>Hour</h3>
 				</div>
 				<div class="container-minute">
-					<h3 class="minute">Time</h3>
+					<h3 class="minute"></h3>
 					<h3>Minute</h3>
 				</div>
 				<div class="container-second">
-					<h3 class="second">Time</h3>
+					<h3 class="second"></h3>
 					<h3>Second</h3>
 				</div>
 			</div>
