--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Simple Music Player</title>
+  <title>Music Playlist | The Boring Years, chin up!</title>
   <!-- Load FontAwesome icons -->
   <link rel="stylesheet" 
         href=
