--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>The Best of 2021</title>
+  <title>Songs in 2021: bruh</title>
   <!-- Load FontAwesome icons -->
   <link rel="stylesheet" 
         href=
